test/trivial/deitz/foo.good
Error: Illegal call of module foo (foo.chpl:4)
