test/trivial/deitz/foo.chpl
var x : integer = 12;

writeln(x);
foo();
